--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.38",
+    "expo-camera": "^16.0.18",
+    "expo-constants": "^17.0.8",
+    "expo-device": "^7.0.2",
     "expo-status-bar": "~2.0.1",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
