--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "lucid-mobile",
   "version": "1.0.0",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "simulate": "node src/scripts/simulate.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -21,6 +23,7 @@
     "expo-device": "^7.0.2",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.2.2",
+    "node-fetch": "^3.3.2",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.3.0",
