--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write \"**/*.{json,js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
