--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
+    "cbor-js": "^0.1.0",
+    "cbor-x": "^1.6.0",
+    "crypto-es": "^2.1.0",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "expo": "~52.0.38",
     "expo-camera": "^16.0.18",
     "expo-constants": "^17.0.8",
     "expo-device": "^7.0.2",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.2.2",
     "node-fetch": "^3.3.2",
@@ -33,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~18.3.12",
     "prettier": "^3.5.3",
     "typescript": "^5.3.3"
