--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
+    "react-native-svg": "^15.11.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
