--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "expo": "~52.0.38",
+    "expo-application": "~6.0.2",
     "expo-camera": "^16.0.18",
     "expo-constants": "^17.0.8",
-    "expo-device": "^7.0.2",
+    "expo-device": "^7.0.3",
+    "expo-file-system": "~18.0.12",
+    "expo-localization": "~16.0.1",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.2.2",
     "node-fetch": "^3.3.2",
+    "posthog-react-native": "^3.13.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-safe-area-context": "^5.3.0",
