--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "expo-application": "~6.0.2",
     "expo-camera": "^16.0.18",
     "expo-constants": "^17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-device": "^7.0.3",
     "expo-file-system": "~18.0.12",
     "expo-localization": "~16.0.1",
+    "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.2.2",
